 - general: added C++11 noexcept specifiers where appropriate
 - general: removed foreach() macro in favor of C++11 range-based for loop
 - lua: added support for Lua versions later than 5.1
 - input: simplified class hierarchy by merging handler+handler_impl into manager_impl
 - gui: added a pure SFML implementation for the gui::manager
 - gui: fixed rare crash in editbox
 - xml: now parsing standard XML comments

v1.2.0:
 - added support for MSVC 2010
 - gui: added the quad2<T> type
 - gui::layer: added missing default constructor
 - gui::text, gui::font_string, gui::edit_box: cleaned some UTF8 to unicode conversions
 - gui::manager: fixed bug when parsing empty lines in toc files
 - xml::document: fixed bug with multiline comments
 - various fixes detected by MSVC

v1.1.6:
 - colors can now be given with the standard '#RRGGBB[AA]' format (both in C++ and XML/Lua)
 - gui::color: added hue/luminosity/saturation operations and istream >> operator

v1.1.5:
 - gui::texture: added texture filtering mode (none or linear)

v1.1.4:
 - gui: uiobject types should now have a CLASS_NAME static member containing the class name
 - gui::frame: create_child() and create_region() can now have a template argument to cast their return value
 - gui::manager: create_frame() can now have a template argument to cast its return value
 - gui::manager: added new versions of register_frame_type() and register_region_type()
 - note: the older versions of the above two are deprecated (will be removed in the future)
 - replaced remaining "can't", "couldn't", "doesn't" in error messages
 - test: now also displaying the C++ created frames by default (check of the recent template stuff)

v1.1.3:
 - gui::event::get() now has a template version, shortcut to the underlying lua::var
 - lua: improved performances of lua::var

v1.1.2:
 - replaced "can't" by "cannot" in error messages

v1.1.1:
 - gui::frame: get_child() and get_region() can now have a template argument to cast their return value