@@ -1,5 +1,5 @@
 #include "lxgui/impl/gui_sfml_material.hpp"
-#include "lxgui/impl/gui_sfml_manager.hpp"
+#include "lxgui/impl/gui_sfml_renderer.hpp"
 #include <lxgui/gui_out.hpp>
 #include <lxgui/utils_string.hpp>
 
